--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,5 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/bluej,eclipse,emacs,intellij+iml,java,jetbrains,linux,macos,notepadpp,sublimetext,vim,windows
 src/META-INF
+platooning/target
+simulator/target
