--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
-# Created by https://www.gitignore.io/api/bluej,eclipse,emacs,intellij+iml,java,jetbrains,linux,macos,notepadpp,sublimetext,vim,windows
+###### The entire .idea folder
+.idea/
+
+# Created by https://www.gitignore.io/api/bluej,eclipse,emacs,intellij+iml,java,jetbrains,linux,macos,maven,notepadpp,sublimetext,vim,windows
 
 ### bluej ###
 # BlueJ: A Java IDE for programming beginners. http://bluej.org
@@ -22,9 +25,6 @@ local.properties
 .loadpath
 .recommenders
 
-# Eclipse Core
-.project
-
 # External tool builders
 .externalToolBuilders/
 
@@ -36,9 +36,6 @@ local.properties
 
 # CDT-specific (C/C++ Development Tooling)
 .cproject
-
-# JDT-specific (Eclipse Java Development Tools)
-.classpath
 
 # Java annotation processor (APT)
 .factorypath
@@ -65,6 +62,13 @@ local.properties
 .cache-main
 .scala_dependencies
 .worksheet
+
+### Eclipse Patch ###
+# Eclipse Core		
+.project
+
+# JDT-specific (Eclipse Java Development Tools)		
+.classpath
 
 ### Emacs ###
 # -*- mode: gitignore; -*-
@@ -109,9 +113,28 @@ flycheck_*.el
 
 # projectiles files
 .projectile
+projectile-bookmarks.eld
 
 # directory configuration
 .dir-locals.el
+
+# saveplace
+places
+
+# url cache
+url/cache/
+
+# cedet
+ede-projects.el
+
+# smex
+smex-items
+
+# company-statistics
+company-statistics-cache.el
+
+# anaconda-mode
+anaconda-mode/
 
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
@@ -135,6 +158,9 @@ flycheck_*.el
 .idea/**/gradle.xml
 .idea/**/libraries
 
+# CMake
+cmake-build-debug/
+
 # Mongo Explorer plugin:
 .idea/**/mongoSettings.xml
 
@@ -155,6 +181,9 @@ atlassian-ide-plugin.xml
 # Cursive Clojure plugin
 .idea/replstate.xml
 
+# Ruby plugin and RubyMine
+/.rakeTasks
+
 # Crashlytics plugin (for Android Studio and IntelliJ)
 com_crashlytics_export_strings.xml
 crashlytics.properties
@@ -168,9 +197,6 @@ fabric.properties
 modules.xml
 .idea/misc.xml
 *.ipr
-
-###### The entire .idea folder
-.idea/
 
 ### Java ###
 # Compiled class file
@@ -205,6 +231,8 @@ hs_err_pid*
 
 # Gradle:
 
+# CMake
+
 # Mongo Explorer plugin:
 
 ## File-based project format:
@@ -218,6 +246,8 @@ hs_err_pid*
 # JIRA plugin
 
 # Cursive Clojure plugin
+
+# Ruby plugin and RubyMine
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
 
@@ -254,7 +284,6 @@ hs_err_pid*
 # Icon must end with two \r
 Icon
 
-
 # Thumbnails
 ._*
 
@@ -273,6 +302,20 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+### Maven ###
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+
+# Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
+!/.mvn/wrapper/maven-wrapper.jar
 
 ### NotepadPP ###
 # Notepad++ backups #
@@ -343,8 +386,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.gitignore.io/api/bluej,eclipse,emacs,intellij+iml,java,jetbrains,linux,macos,notepadpp,sublimetext,vim,windows
-src/META-INF
-platooning/target
-simulator/target
-target/
+# End of https://www.gitignore.io/api/bluej,eclipse,emacs,intellij+iml,java,jetbrains,linux,macos,maven,notepadpp,sublimetext,vim,windows
