--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,13 @@
 <project>
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>se.byggarebob.platooning</groupId>
-    <artifactId>dat255</artifactId>
-    <version>1</version>
-    <packaging>pom</packaging>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>se.byggarebob.platooning</groupId>
+  <artifactId>dat255</artifactId>
+  <version>1</version>
+  <packaging>pom</packaging>
 
-    <modules>
-        <module>simulator</module>
-        <module>platooning</module>
-    </modules>
+  <modules>
+    <module>simulator</module>
+    <module>platooning</module>
+    <module>ui</module>
+  </modules>
 </project>
