Add connection via dialog

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -30,7 +30,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>Main</mainClass>
+              <mainClass>ui.Main</mainClass>
             </manifest>
           </archive>
         </configuration>
