Add controls to MainStage. Begin contro logic

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -43,5 +43,12 @@
     <testSourceDirectory>src/test/java</testSourceDirectory>
   </build>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.controlsfx</groupId>
+      <artifactId>controlsfx</artifactId>
+      <version>8.40.12</version>
+    </dependency>
+  </dependencies>
 
 </project>
