--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -20,16 +20,15 @@
         <outputDirectory>target/classes</outputDirectory>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <testOutputDirectory>target/test-classes</testOutputDirectory>
-        <sourceDirectory>src/main/java</sourceDirectory>
-        <testSourceDirectory>src/test/java</testSourceDirectory>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>src/se.byggarebob.platooning.simulator/test</testSourceDirectory>
     </build>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
+            <version>4.11</version>
         </dependency>
         <dependency>
             <groupId>se.byggarebob.platooning</groupId>
